--- a/themes/raditian-free-hugo-theme/layouts/index.html
+++ b/themes/raditian-free-hugo-theme/layouts/index.html
@@ -3,10 +3,11 @@
 <html lang="en">
 
 <head>
+	{{ template "_internal/google_analytics.html" . }}
 
-    {{ partial "head.html" . }}
+	{{ partial "head.html" . }}
 
-    {{ partial "head_custom.html" . }}
+	{{ partial "head_custom.html" . }}
 
 </head>
 
@@ -19,7 +20,7 @@
 	{{ end }}
 
 	{{ partial "footer.html" . }}
-    {{ partial "base-foot.html" . }}
+	{{ partial "base-foot.html" . }}
 </body>
 
 </html>
