--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,11 +2,11 @@
   <div class="container rad-fade-in">
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <a class="navbar-brand" href="{{ .Site.BaseURL | absURL }}">
-        <span>{{ .Site.Params.logo.text1 }}</span>
-        <span>{{ .Site.Params.logo.text2 }}</span>
+        <img alt="UAlberta Taekwondo Club" src="/logo.png" height="100%" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent, #header"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class=" navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent, #header" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
